<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/textEnterSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_Search"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002" />

    <TextView
        android:id="@+id/textStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/search_Statistics"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="81dp"
        android:layout_height="38dp"
        android:textOff="@string/greaterthan"
        android:textOn="@string/lessthan"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69" />

    <TextView
        android:id="@+id/textAttr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_Attr1"
        app:layout_constraintBottom_toBottomOf="@+id/toggleButton1"
        app:layout_constraintEnd_toStartOf="@+id/toggleButton1"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextAttr1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/toggleButton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/toggleButton1" />

    <ToggleButton
        android:id="@+id/toggleButton2"
        android:layout_width="80dp"
        android:layout_height="38dp"
        android:textOff="@string/greaterthan"
        android:textOn="@string/lessthan"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton1"
        app:layout_constraintVertical_bias="0.16000003" />

    <ToggleButton
        android:id="@+id/toggleButton3"
        android:layout_width="80dp"
        android:layout_height="38dp"
        android:text="ToggleButton"
        android:textOff="@string/greaterthan"
        android:textOn="@string/lessthan"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton2" />

    <EditText
        android:id="@+id/editTextAttr3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/toggleButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/toggleButton3" />

    <ToggleButton
        android:id="@+id/toggleButton4"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:textOff="@string/greaterthan"
        android:textOn="@string/lessthan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />

    <EditText
        android:id="@+id/editTextAttr4"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/toggleButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/toggleButton4" />

    <TextView
        android:id="@+id/textAttr4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/search_Attr4"
        app:layout_constraintBottom_toBottomOf="@+id/toggleButton4"
        app:layout_constraintEnd_toStartOf="@+id/toggleButton4"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textAttr3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_Attr3"
        app:layout_constraintBottom_toBottomOf="@+id/toggleButton3"
        app:layout_constraintEnd_toStartOf="@+id/toggleButton3"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextAttr2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/toggleButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/toggleButton2" />

    <TextView
        android:id="@+id/textAttr2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_Attr2"
        app:layout_constraintBottom_toBottomOf="@+id/toggleButton2"
        app:layout_constraintEnd_toStartOf="@+id/toggleButton2"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="16dp"
        android:text="@string/searchbutton"
        android:textSize="12sp"
        android:onClick="onClickSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton4" />


</androidx.constraintlayout.widget.ConstraintLayout>